# smw

./: .gitignore  Cargo.toml  flips
src/: errors.rs  main.rs  ui-old.rs  ui.rs  utils.rs
src/ui/: config.rs  mod.rs  search.rs
