[package]
name = "smw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# flips = {path = "../flips.rs"}
flips = "*"
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15.0", features = ["full"] }
reqwest = { version = "*", features = ["blocking"] }
tempfile = "*"
error-chain = "*"
scraper = "*"
tui = { version = "0.16", default-features = false, features = ['crossterm', 'serde'] }
unicode-width = "0.1.7"
zip = "*"
